--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,4 +3,4 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import "bootstrap-4-spacers";
-@import 'bootstrap-datetimepicker';
+@import "bootstrap-datetimepicker";
